Add Login Modal project

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -20,7 +20,7 @@
         <!-- Menu Item -->
         <div class="group">
           <a href="#">Vector</a>
-          <div class="mx-2 mt-2 duration-500 border-b-2 opacity-0 bor`der-black group-hover:opacity-100"></div>
+          <div class="mx-2 mt-2 duration-500 border-b-2 opacity-0 border-black group-hover:opacity-100"></div>
         </div>
         <div class="group">
           <a href="#">Ilustrrations</a>
@@ -37,7 +37,7 @@
       </div>
 
       <!-- Search Container -->
-      <div class="flex flex-col justify-between space-y-5 md:flex-row md:spaxe-y-0">
+      <div class="flex flex-col justify-between space-y-5 md:flex-row md:space-y-0">
         <!-- Input and SVG Container  -->
         <div class="flex justify-between border-b">
           <input type="text" class="ml-6 border-none md:w-80 placeholder:font-thin" placeholder="Search" />
