--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="bg-slate-700 text-white">
-    <h1 class="text-3xl text-center py-3">Tailwind Course &mdash; Mini Projects</h1>
+    <h1 class="text-3xl text-center py-6">Tailwind Course &mdash; Mini Projects</h1>
   </header>
   <nav class="flex flex-col px-3 text-center md:w-1/2 mx-auto">
     <a href="email-subscribe/index.html"
@@ -26,7 +26,14 @@
     <a href="image-gallery/index.html"
       class="py-2 mt-4 border-2 border-slate-700 rounded-lg hover:bg-slate-700 hover:text-white transition-all duration-150">Image
       Gallery</a>
+    <a href="login-modal/index.html"
+      class="py-2 mt-4 border-2 border-slate-700 rounded-lg hover:bg-slate-700 hover:text-white transition-all duration-150">Login
+      Modal</a>
   </nav>
+
+  <footer class="bg-slate-700 text-gray-300 text-center py-6 fixed bottom-0 w-full">
+    <p>Made with <a href="https://tailwindcss.com/" target="_blank" class="text-white">Tailwind CSS</a></p>
+  </footer>
 </body>
 
 </html>
